Feat: add some req/res examples (more to come)
