# docs/swagger.json
@@ -336,7 +336,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.SuccessResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.LoginSuccessData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -376,7 +388,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.SuccessResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.User"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -451,11 +475,13 @@
             "properties": {
                 "content": {
                     "type": "string",
-                    "maxLength": 6666
+                    "maxLength": 6666,
+                    "example": "sleep forever"
                 },
                 "title": {
                     "type": "string",
-                    "maxLength": 666
+                    "maxLength": 666,
+                    "example": "sleep"
                 }
             }
         },
@@ -467,12 +493,23 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "shxt@acceed.jp"
                 },
                 "password": {
                     "type": "string",
                     "maxLength": 12,
-                    "minLength": 6
+                    "minLength": 6,
+                    "example": "blackhole8"
+                }
+            }
+        },
+        "handler.LoginSuccessData": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NTE5MDMzNTYsInVzZXJJRCI6MSwidXNlcm5hbWUiOiJLZW5DaGVuIn0.kBbaD4Z0Wacz-CBUacLq6fTpIdqq5Sfuoc4yF_BkfEE"
                 }
             }
         },
@@ -486,20 +523,24 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "tdn@coat.jp"
                 },
                 "firstName": {
                     "type": "string",
-                    "maxLength": 666
+                    "maxLength": 666,
+                    "example": "yaju"
                 },
                 "lastName": {
                     "type": "string",
-                    "maxLength": 666
+                    "maxLength": 666,
+                    "example": "senpai"
                 },
                 "password": {
                     "type": "string",
                     "maxLength": 12,
-                    "minLength": 6
+                    "minLength": 6,
+                    "example": "114514"
                 }
             }
         },
@@ -513,14 +554,46 @@
             "properties": {
                 "content": {
                     "type": "string",
-                    "maxLength": 6666
+                    "maxLength": 6666,
+                    "example": "sleep forever"
                 },
                 "done": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "title": {
                     "type": "string",
-                    "maxLength": 666
+                    "maxLength": 666,
+                    "example": "sleep"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string",
+                    "example": "2025-07-07 21:51:47"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "ken@ken.me"
+                },
+                "firstName": {
+                    "type": "string",
+                    "example": "Ken"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Chen"
+                },
+                "updatedAt": {
+                    "type": "string",
+                    "example": "2025-07-07 21:51:47"
                 }
             }
         },
